@startuml
'https://plantuml.com/class-diagram

Main *--> GameSetup
GameSetup *--> Gameplay
GameSetup *--> ClientPool
Gameplay *--> Player
Gameplay *--> Bank
Bank *--> Negotiations
Negotiations *--> ClientNegotiations
Negotiations *--> ClubNegotiation
ClientNegotiations *--> ClientSign
ClientNegotiations *--> ClientExtention
ClubNegotiation *--> ClubExtention
ClubNegotiation *--> ClubSign
Player *--> Clients
Player *--> Agency
Agency *--> ClientNegotiations

class Main {
GameSetup()
}

class GameSetup{
Player
Bank
ClientPool
Agency
}

class Gameplay {
Player
Negotiations
startGame()
nextPlayer()
}
class Player {
Bank
Agency
}

class ClientPool {
Clients
ArrayList<Clients> clientPool
public void initializeClientPool()
public void addToClientPoolTxt()
public void replacePlayer()
public void addNewClient()
public static void clearCsv()
public void removeClientFromPool(Clients client)

}


interface Negotiations{
negotiationType()
acceptOffer()
declineOffer()
addClientToAgency ()
removeClientFromPool()
}

class ClientNegotiations{
negotiationType()
addClientToAgency()
}
class ClubNegotiation{
negotiationType ()
addClient()

}
class Bank{
addMoney()
withdrawMoney()
taxes()
isBankrupt ()
getBalance ()
setBalance ()
}

class Clients{
String name
int value
int age
int potential
String position
String getName()
int getValue()
int getAge()
int getPosition()
}

class Agency{
private int bureauLevel
private ArrayList<Clients> agency


}
class ClientSign{
Bank
}

class ClientExtention{
Bank
removeClient()
}

class ClubSign{
Bank
addClient
}

class ClubExtention{
removeClient
Bank
}









@enduml